Fixed alignment issue in info block

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ h2 {
 
 }
 .topic {
+	top:9%;
 	position:relative;
 	left:26vh;
 	width:53%;
